# auto-phylo-pipeliner

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  commands.json  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
auto_phylo/gui/: gui.py
auto_phylo/gui/io/: PipelineGenerator.py
auto_phylo/gui/model/: Command.py  CommandConfiguration.py  Commands.py  Pipeline.py  PipelineConfiguration.py  SpecialNotSupportedError.py
auto_phylo/gui/util/: Observable.py
features/: generate-config.feature  generate-pipeline.feature
features/fixtures/: pipelines.py
features/steps/: generate-config.py  generate-files.py  generate-pipeline.py
resources/: run-docker.sh
src/auto_phylo/: commands.json
src/auto_phylo/gui/: __init__.py  gui.py
src/auto_phylo/gui/component/: AutoPhyloDesigner.py  ParamConfigurationDialog.py  ParseErrorViewerDialog.py  PipelineDesigner.py
src/auto_phylo/gui/io/: ConfigurationGenerator.py  ConfigurationParser.py  ParseError.py  PipelineGenerator.py  PipelineParser.py  RunFileGenerator.py  RunFileParser.py
src/auto_phylo/gui/model/: Command.py  CommandConfiguration.py  Commands.py  Pipeline.py  PipelineChangeEvent.py  PipelineConfiguration.py
src/auto_phylo/pipeliner/: __init__.py  gui.py
src/auto_phylo/pipeliner/component/: AutoPhyloPipeliner.py  ParamConfigurationDialog.py  PipelineDesigner.py
src/auto_phylo/pipeliner/io/: ConfigurationGenerator.py  ConfigurationParser.py  PipelineParser.py
src/auto_phylo/pipeliner/model/: Command.py  CommandConfiguration.py  CommandConfigurationEvent.py  Commands.py  PipelineConfiguration.py
tests/features/: generate-files.feature  generate-texts.feature  parse-texts.feature
tests/fixtures/: pipeline_errors.py  pipelines.py  run_file_errors.py  run_files.py
tests/gui/: launch-auto-phylo-designer.py  launch-parse-error-viewer-dialog.py
tests/matchers/: CommandConfigurationMatcher.py  CommandMatcher.py  EntityMatcher.py  ParseErrorGeneralErrorsMatcher.py  ParseErrorLinesMatcher.py  PipelineConfigurationMatcher.py  PipelineMatcher.py
tests/steps/: generate-files.py  generate-texts.py  parse-texts-with-errors.py  parse-texts.py
