[metadata]
name = auto-phylo-gui
version = 0.1.dev2
author = Jorge Vieira, Cristina Vieira, Hugo López-Fernández, Miguel Reboiro Jato
author_email = jbvieira@ibmc.up.pt
description = A GUI to create auto-phylo pipelines.
keywords = phylogenetics, pipeline
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.sing-group.org/gitlab/ibmc-meg/auto-phylo-gui
classifiers =
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
zip_safe = False
python_requires = >=3.8

[options.entry_points]
console_scripts =
  auto-phylo-gui = auto_phylo.gui.gui:launch

[options.package_data]
auto_phylo = [py.typed, *.pyi]

[options.extras_require]
dev =
  twine==4.0.2
  build==0.10.0
  setuptools==68.0.0
  wheel==0.38.4
  pyroma==4.2
  mypy==1.5.1
