[metadata]
name = auto-phylo-pipeliner
version = 0.1.dev18
author = Jorge Vieira, Cristina Vieira, Hugo López-Fernández, Miguel Reboiro-Jato
author_email = jbvieira@ibmc.up.pt
description = A GUI to create auto-phylo pipelines.
keywords = phylogenetics, pipeline
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.sing-group.org/gitlab/ibmc-meg/auto-phylo-pipeliner
classifiers =
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
  =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
  sv-ttk==2.5.5

[options.entry_points]
console_scripts =
  auto-phylo-gui = auto_phylo.pipeliner.gui:launch

[options.package_data]
auto_phylo = [py.typed, *.pyi, commands.json]

[options.packages.find]
where=src
exclude=
  tests*

[options.extras_require]
dev =
  twine==4.0.2
  build==0.10.0
  setuptools==68.0.0
  wheel==0.38.4
  pyroma==4.2
  mypy==1.5.1
  behave==1.2.6
  PyHamcrest==2.0.4

[behave]
paths=tests
